# amplifier-collection-amplifier-dev

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
agents/: session-debugger.md
amplifier_collection_amplifier_dev/: __init__.py  pyproject.toml
amplifier_collection_amplifier_dev/agents/: amplifier-explainer.md  module-author.md  profile-designer.md
amplifier_collection_amplifier_dev/context/architecture/: README.md
amplifier_collection_amplifier_dev/context/contracts/: HOOK_CONTRACT_SUMMARY.md  PROVIDER_CONTRACT_SUMMARY.md
amplifier_collection_amplifier_dev/context/examples/: collection-packaging-guide.md
amplifier_collection_amplifier_dev/context/frameworks/: ARCHITECTURE_REASONING.md  CONCEPTUAL_MODEL.md
amplifier_collection_amplifier_dev/context/philosophy/: THINKING-PHILOSOPHY.md
amplifier_collection_amplifier_dev/context/protocols/: SESSION-DEBUGGING.md  THINKING-PLAYBOOK.md  UNBLOCKING-PLAYBOOK.md  VELOCITY-PATTERNS.md  WORKFLOW-PATTERNS.md
amplifier_collection_amplifier_dev/profiles/: amplifier-builder.md
context/contracts/: README.md  TOOL_CONTRACT_SUMMARY.md
context/examples/: tool-example.md
context/frameworks/: DESIGN_PRINCIPLES.md  DIAGNOSTIC_METHODOLOGY.md  INVESTIGATION_PROTOCOL.md  PROBLEM_SOLVING_HEURISTICS.md  README.md
context/philosophy/: REASONING-LOOP.md
context/protocols/: ANTI-PATTERNS.md  PATTERNS.md
profiles/: amplifier-builder.md  amplifier-dev.md  reasoning-dev-openai.md  reasoning-dev.md  sam-openai.md  sam.md
tests/: README.md  profile-tests.yaml
