[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-collection-amplifier-dev"
version = "3.0.0"
description = "Collection for developing Amplifier modules, profiles, and collections with systematic thinking patterns"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Microsoft Amplifier Team"}
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
amplifier_collection_amplifier_dev = ["*.toml"]

[tool.amplifier.collection]
author = "Microsoft Amplifier Team"
capabilities = [
    "module-development",
    "profile-design",
    "collection-authoring",
    "amplifier-internals",
    "systematic-thinking",
    "evidence-driven-reasoning",
    "session-debugging"
]
agents = [
    { name = "module-author", path = "agents/module-author.md" },
    { name = "profile-designer", path = "agents/profile-designer.md" },
    { name = "amplifier-explainer", path = "agents/amplifier-explainer.md" },
    { name = "session-debugger", path = "agents/session-debugger.md" }
]
dependencies = [
    "foundation",
    "developer-expertise"
]
